architectural improvement for automatic calculus